--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,20 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 2
+      เกี่ยวกับเรา
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ionic-padding">
+  <p>
+    นายนิธิวัฒน์ บัวพิพัฒน์วงศ์<br>
+    นักเรียนสาขาเทคโนโลยีสารสนเทศ<br>
+    ชอบกินข้าวผัดกะเพราหมูกรอบ<br>
+    ชอบสีฟ้า<br>
+    เพื่อนที่สนิทชื่อ น้ำ โอม <br>
+    งานอดิเรก ฟังเพลง<br>
+  </p>
 
   <app-explore-container name="Tab 2 page"></app-explore-container>
 </ion-content>
