--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,17 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 3
+      ติดต่อเรา
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  <ion-icon name="call-outline"></ion-icon> 0623314124<br>
+  <ion-icon name="at-outline"></ion-icon>nattiya.kaewjmsai<ion-icon name="at-outline"></ion-icon>gmail.com
+  <ion-icon name="logo-facebook"></ion-icon>นิธิวัฒน์ฯ<div class=""></div>
+  <ion-icon name="logo-instagram"></ion-icon>Mxscot_z26<br>
+  <ion-icon name="logo-tiktok"></ion-icon>Nithiwat<br>
+
 </ion-content>
